--- a/makefile2
+++ b/makefile2
@@ -1,14 +1,14 @@
-pairem2.jar: pairem2.class	
-	jar cfe pairem2.jar pairem2 pairem2.class
+Students.jar: Students.class	
+	jar cfe Students.jar pairem2 Students.class
 	
-jar: pairem2.class	
-	jar cfe pairem2.jar pairem2.class
+jar: Students.class	
+	jar cfe Students.jar Students.class
 	
-run: pairem2.jar
-	java -jar pairem2.jar
+run: Students.jar
+	java -jar Students.jar
 	
-pairem2.class: pairem2.java
-	javac pairem2.java
+Students.class: Students.java
+	javac Students.java
 
-pdf: pairem2.java
-	enscript --color=1 -C -Ejava -1 -o pairem2.ps pairem2.java && ps2pdf pairem2.ps  
+pdf: Students.java
+	enscript --color=1 -C -Ejava -1 -o Students.ps Students.java && ps2pdf Students.ps  
